# nexus

./: .gitignore  CHANGELOG.md  CLAUDE.md  PRD.md  SPRINTS.md  package.json  tsconfig.json  turbo.json
docs/: naming-brainstorm.md  sprint-2-plan.md  sprint-3-plan.md  strategy-plan-a.md
docs/api/: agent-tools.ts  geometry-api.ts
docs/architecture/: 00-executive-summary.md  01-system-architecture.md  02-tech-stack-matrix.md  03-data-interoperability.md  04-design-patterns.md  05-agentic-ui-design.md  06-mvp-roadmap.md  07-benchmarks.md  08-security-compliance.md  09-risks.md  NEXUS-research-summary.md  README.md
docs/research/: 00-landscape-analysis.md  01-ai-spatial-landscape.md  02-open-source-tools-catalog.md  03-tiered-study-plan.md  04-adjacent-technology.md
docs/schemas/: uses.fbs  uses.ts
skyforge/: .env.example  docker-compose.yml  package.json
skyforge/apps/api/: Dockerfile  alembic.ini  pyproject.toml
skyforge/apps/api/alembic/: env.py  script.py.mako
skyforge/apps/api/sql/: 001_init.sql
skyforge/apps/api/src/: auth.py  config.py  db.py  main.py  models.py
skyforge/apps/api/src/routes/: health.py  jobs.py  projects.py  shares.py  uploads.py  webhooks.py
skyforge/apps/api/src/services/: gcs.py  gemini.py  pubsub.py
skyforge/apps/web/: Dockerfile  package.json
skyforge/apps/web/src/app/: layout.tsx  page.tsx
skyforge/apps/worker/: Dockerfile  pyproject.toml
skyforge/apps/worker/src/: worker.py
skyforge/docs/: 00-interview-plan.md  01-mvp-architecture.md  02-build-roadmap.md  03-pricing-model.md
(+1 files in other folders)
